<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_border_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/bold"
            android:text="@string/send_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/regular"
            android:text="@string/mobile_number"
            android:textColor="@color/colorPrimaryG"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/mobile_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:autofillHints="phone"
            android:background="@drawable/grey_border_bg"
            android:fontFamily="@font/bold"
            android:hint="@string/enter_your_number"
            android:inputType="number"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_grey"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/regular"
            android:text="@string/message"
            android:textColor="@color/colorPrimaryG"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/grey_border_bg">

            <EditText
                android:id="@+id/message_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:autofillHints="text"
                android:background="@null"
                android:fontFamily="@font/bold"
                android:gravity="start"
                android:hint="@string/enter_your_message"
                android:inputType="textCapSentences|textMultiLine"                android:lines="3"
                android:minLines="3"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_grey"
                android:textSize="@dimen/_11sdp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/app_btn_bg"
            android:fontFamily="@font/bold"
            android:padding="@dimen/_8sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</RelativeLayout>
