<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_14sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inbox"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:drawablePadding="@dimen/_3sdp"
            android:fontFamily="@font/bold"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/inbox"
            android:textColor="@color/colorPrimaryG"
            android:textSize="@dimen/_13sdp"
            app:drawableStartCompat="@drawable/inbox" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/text_color_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:drawablePadding="@dimen/_3sdp"
            android:fontFamily="@font/bold"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/sent"
            android:textColor="@color/colorPrimaryG"
            android:textSize="@dimen/_13sdp"
            app:drawableStartCompat="@drawable/arrow_outward" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/text_color_grey" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdp"
        android:backgroundTint="@color/purple_700"
        android:contentDescription="@string/app_name"
        android:src="@drawable/send" />

</RelativeLayout>
